edit homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dtommyhil.github.io/weather-app",
+  "homepage": "http://dtommyhil.github.io/weather_app",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
@@ -21,7 +21,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  
+
   "eslintConfig": {
     "extends": [
       "react-app",
